[project]
name = "cross-border-e-commerce-agent-swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chardet>=7.4.3",
    "google-genai>=2.8.0",
    "html-to-markdown>=3.6.2",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langchain-google-vertexai>=3.2.3",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "markdownify>=1.2.2",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "pytrends>=4.9.2",
    "sqlmodel>=0.0.39",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.1",
]
